--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Git Starter - Premier Projet Git</title>
 </head>
 <body>
-<h1>Jean-Charles BOURSEAU v2</h1>
+<h1>Jean-Charles BOURSEAU v2 ***FIX***</h1>
 </body>
 </html>
